--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, totam placeat dolorum nobis laudantium dicta laborum, maiores voluptatibus mollitia corporis, aperiam eum illum delectus. Qui hic corporis blanditiis fugit distinctio.</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-danger btn-lg px-4 gap-3 rounded-0">Upload an image</button>
+            <button type="button" class="btn btn-danger btn-lg px-4 gap-3 rounded-0" (click)="onButtonClick()">Upload an image</button>
         </div>
     </div>
 </div>
