--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -7,8 +7,10 @@
             <h1 class="display-5 fw-bold lh-1 mb-3">#1 Upload</h1>
             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum recusandae aliquid suscipit iusto. Enim autem ratione placeat earum asperiores architecto facilis corrupti voluptatibus, beatae aspernatur omnis consequatur impedit rem sint.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                <!--file input-->
-                <button type="button" class="btn btn-danger btn-lg px-4 me-md-2 rounded-0">Recognize</button>
+                <div>
+                    <input class="form-control rounded-0" type="file" id="formFile">
+                </div>
+                <button type="button" class="btn btn-danger btn-md px-4 me-md-2 rounded-0">Recognize</button>
             </div>
         </div>
     </div>
