--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -1,7 +1,7 @@
 <div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
-            <img src="{{imageUrl}}" class="d-block mx-lg-auto img-fluid" alt="Uploaded image" width="700" height="500" loading="lazy">
+            <img *ngIf="imageUrl !== null" src="{{imageUrl}}" class="d-block mx-lg-auto img-fluid" alt="Uploaded image" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
             <h1 class="display-5 fw-bold lh-1 mb-3">#1 Upload</h1>
@@ -10,7 +10,8 @@
                 <div>
                     <input class="form-control rounded-0" type="file" id="formFile" (change)="onFileSelected($event)">
                 </div>
-                <button type="button" class="btn btn-danger btn-md px-4 me-md-2 rounded-0">Recognize</button>
+                <button *ngIf="selectedFile === null" type="button" class="btn btn-danger btn-md px-4 me-md-2 rounded-0 disabled">Recognize</button>
+                <button *ngIf="selectedFile !== null" type="button" class="btn btn-danger btn-md px-4 me-md-2 rounded-0">Recognize</button>
             </div>
         </div>
     </div>
