--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -19,6 +19,11 @@
 
 <div class="album py-5 bg-light">
     <div class="container">
+        <div *ngIf="isRequesting" class="d-flex justify-content-center">
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div *ngFor="let result of resultsList" class="col">
